--- a/Desktop/P3/index.html
+++ b/Desktop/P3/index.html
@@ -90,7 +90,7 @@
 
                     <div class="detail">
                         
-                            <h3>La pqlette du gout </h3>
+                            <h3>La palette du gout </h3>
                             <i class="far fa-heart"></i>
                        
                        <p>Ménilmontant </p>
