--- a/Desktop/P3/index.html
+++ b/Desktop/P3/index.html
@@ -84,10 +84,11 @@
 
           <div id="contain">
 
-               <div class="contenup1">
+              <div class="contenup1">
                    
+                <a href="resto1.html">
                    <div class="image">
-                       <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                       <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
                    </div>
                    <button>Nouveau</button>
                     <div class="detail">
@@ -101,7 +102,7 @@
                             <div class="et2"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
-
+                
                </div>
 
                <div class="contenup1">
