--- a/Desktop/P3/index.html
+++ b/Desktop/P3/index.html
@@ -174,7 +174,7 @@
 <footer>
 
     <div class="contenufooter">
-        <img src="images/logo/ohmyfood.png" >
+        <div class="titrefooter"><p>ohmyfood</p></div>
         <div class="f1">
             <i class="fas fa-utensils"></i>
             <p>Proposer un restaurant</p>
@@ -187,7 +187,7 @@
             <p>Mentions légales</p>
         </div>
         <div class="contact">
-            <a href="#"><p>Contact</p></a>
+            <a href="#">Contact</a>
         </div>
     </div>
 </footer>  
