--- a/Desktop/P3/resto1.html
+++ b/Desktop/P3/resto1.html
@@ -9,18 +9,19 @@
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
     crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resto1</title>
 </head>
 <body>
-    <header>
-
-        <a href="index.html" style="text-decoration: none;"><i class="fas fa-arrow-left"></i></a>
-        <div class="logo"><img src="images/logo/ohmyfood.png"></div>
-      
-    </header>
+  <header>
+    <a href="index.html" style="text-decoration: none; color: black;"><i class="fas fa-arrow-left"></i></a>
+    <div class="logo"><a href="#">ohmyfood</a></div>
+  
+</header>
 
     <main>
 
@@ -43,11 +44,13 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>La palette du gout  </b></p>
-                                  <h4>Ménilmontant </h4>
+                                  <p><b>Tartare de poulpe acidule </b></p>
+                                  <h4>
+                                    Et sa farandole de petits légumes
+                                  </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25$</b>
+                                  <b>25€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -66,7 +69,7 @@
                                   <h4>Ménilmontant </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25$</b>
+                                  <b>25€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -85,7 +88,7 @@
                                   <h4>Ménilmontant </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25$</b>
+                                  <b>25€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -109,7 +112,7 @@
                                 <h4>Ménilmontant </h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25$</b>
+                                <b>25€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -128,7 +131,7 @@
                                   <h4>Ménilmontant </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25$</b>
+                                  <b>25€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -147,7 +150,7 @@
                                   <h4>Ménilmontant </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25$</b>
+                                  <b>25€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -169,7 +172,7 @@
                                 <h4>Ménilmontant </h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25$</b>
+                                <b>25€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -188,7 +191,7 @@
                                 <h4>Ménilmontant </h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25$</b>
+                                <b>25€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -207,7 +210,7 @@
                                 <h4>Ménilmontant </h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25$</b>
+                                <b>25€</b>
                               </div>    
                       </div>
                       <div class="validation">
