--- a/Desktop/P3/resto1.html
+++ b/Desktop/P3/resto1.html
@@ -38,7 +38,7 @@
              <div id="contain">
    
               <div class="p1">
-                  <div class="entree">ENTREES</div>
+                  <div class="entree">Entrées</div>
                     <div class="case1 effet-opacity">
                       <div class="contenup1" >
 
@@ -46,7 +46,7 @@
                                 <div class="menu">    
                                   <p><b>Tartare de poulpe acidule </b></p>
                                   <h4>
-                                    Et sa farandole de petits légumes
+                                    Aux zestes d'orange
                                   </h4>
                                 </div>   
                                 <div class="pricemenu">  
@@ -65,11 +65,11 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>La palette du gout  </b></p>
-                                  <h4>Ménilmontant </h4>
+                                  <p><b>Velouté de légumes d'antan</b></p>
+                                  <h4>Carotte, panais, topinambour</h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25€</b>
+                                  <b>35€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -84,11 +84,11 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>La palette du gout  </b></p>
-                                  <h4>Ménilmontant </h4>
+                                  <p><b>Soupe à l'oignon</b></p>
+                                  <h4>Revisitée </h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25€</b>
+                                  <b>20€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -101,18 +101,18 @@
               </div>  
 
               <div class="p2">
-                  <p class="entree2">PLATS</p>
+                  <p class="entree2">Plats</p>
                   
                   <div class="case4 effet-opacity">
                     <div class="contenup1" >
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>La palette du gout  </b></p>
-                                <h4>Ménilmontant </h4>
+                                <p><b>Coquilles Saint-Jacques</b></p>
+                                <h4>Accompagnées d'une purée de panais</h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25€</b>
+                                <b>40€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -127,11 +127,11 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>La palette du gout  </b></p>
-                                  <h4>Ménilmontant </h4>
+                                  <p><b>Magret de canard</b></p>
+                                  <h4>Et parmentier de pommes de terre</h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25€</b>
+                                  <b>35€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -146,11 +146,11 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>La palette du gout  </b></p>
-                                  <h4>Ménilmontant </h4>
+                                  <p><b>Pigeonneau d’Ille-et-Vilaine</b></p>
+                                  <h4>Sur son lit de gnocchis aux légumes</h4>
                                 </div>   
                                 <div class="pricemenu">  
-                                  <b>25€</b>
+                                  <b>44€</b>
                                 </div>    
                         </div>
                         <div class="validation">
@@ -161,18 +161,18 @@
                     </div> 
               </div>  
               <div class="p3">
-                  <p class="entree3">DESSERT</p>
+                  <p class="entree3">Desserts</p>
 
                   <div class="case7 effet-opacity">
                     <div class="contenup1" >
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>La palette du gout  </b></p>
-                                <h4>Ménilmontant </h4>
+                                <p><b>Pétales de violettes glacés</b></p>
+                                <h4>Et purée de noisettes</h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25€</b>
+                                <b>18€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -187,11 +187,11 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>La palette du gout  </b></p>
-                                <h4>Ménilmontant </h4>
+                                <p><b>Fondant au chocolat</b></p>
+                                <h4>Revisité</h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25€</b>
+                                <b>22€</b>
                               </div>    
                       </div>
                       <div class="validation">
@@ -206,11 +206,11 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>La palette du gout  </b></p>
-                                <h4>Ménilmontant </h4>
+                                <p><b>Millefeuille croustillant</b></p>
+                                <h4>Myrtilles et pâte d’amande</h4>
                               </div>   
                               <div class="pricemenu">  
-                                <b>25€</b>
+                                <b>23€</b>
                               </div>    
                       </div>
                       <div class="validation">
