--- a/Desktop/P3/index.html
+++ b/Desktop/P3/index.html
@@ -17,6 +17,12 @@
 </head>
 <body>
 
+<!-- Loading spinner -->
+<div class="spinner">
+    <div class="spinner__border">
+      <div class="spinner__center"></div>
+    </div>
+</div>
 
 <header>
 
