footer_menu_responsive

--- a/Desktop/P3/index.html
+++ b/Desktop/P3/index.html
@@ -24,6 +24,7 @@
     </div>
 </div>
 
+
 <header>
 
     <div class="logo"><a href="#">ohmyfood</a></div>
@@ -195,7 +196,7 @@
             <p>Mentions légales</p>
         </div>
         <div class="contact">
-            <a href="#">Contact</a>
+            <a href="mailto:juniorclass@gmail.com">Contact</a>
         </div>
     </div>
 </footer>  
