--- a/Desktop/P3/resto1.html
+++ b/Desktop/P3/resto1.html
@@ -221,33 +221,33 @@
                   </div> 
                 </div>    
              </div>    
-                     
-             
-             <button> Commander</button>
+             <div class="btncmd">        
+              <button> Commander</button>
+            </div>  
 
            </div>
 
     </main>
     <footer>
 
-        <div class="contenufooter">
-            <img src="images/logo/ohmyfood.png" style="color: blanchedalmond; width: 50%;">
-            <div class="f1">
-                <i class="fas fa-utensils"></i>
-                <p>Proposer un restaurant</p>
-            </div>
-            <div class="f2">
-                <i class="fas fa-hands-helping"></i>
-                <p>Devenir partenaire</p>
-            </div>
-            <div class="mention">
-                <p>Mentions légales</p>
-            </div>
-            <div class="contact">
-                <a href="#"><p>Contact</p></a>
-            </div>
-        </div>
-    </footer> 
+      <div class="contenufooter">
+          <div class="titrefooter"><p>ohmyfood</p></div>
+          <div class="f1">
+              <i class="fas fa-utensils"></i>
+              <p>Proposer un restaurant</p>
+          </div>
+          <div class="f2">
+              <i class="fas fa-hands-helping"></i>
+              <p>Devenir partenaire</p>
+          </div>
+          <div class="mention">
+              <p>Mentions légales</p>
+          </div>
+          <div class="contact">
+              <a href="mailto:juniorclass@gmail.com">Contact</a>
+          </div>
+      </div>
+  </footer> 
 
 
 </body>
