menu_palette_du_gout

--- a/Desktop/P3/resto1.html
+++ b/Desktop/P3/resto1.html
@@ -31,7 +31,7 @@
         <div class="partie3">
 
             <div class="titrep3">
-                <h1>À la française</h1>
+                <h1>La palette du goût</h1>
                 <i  class="far fa-heart"></i>
             </div>
    
@@ -44,9 +44,9 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Tartare de poulpe acidule </b></p>
+                                  <p><b>Fricassée d'escargot</b></p>
                                   <h4>
-                                    Aux zestes d'orange
+                                    Au piment d'Espelette
                                   </h4>
                                 </div>   
                                 <div class="pricemenu">  
@@ -65,8 +65,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Velouté de légumes d'antan</b></p>
-                                  <h4>Carotte, panais, topinambour</h4>
+                                  <p><b>Foie gras de canard mi-cuit</b></p>
+                                  <h4>Et ses copeaux de truffe noire</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>35€</b>
@@ -84,8 +84,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Soupe à l'oignon</b></p>
-                                  <h4>Revisitée </h4>
+                                  <p><b>Oeuf au plat</b></p>
+                                  <h4>Assaisonné à la truffe sur lit de caviar</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>20€</b>
@@ -108,8 +108,8 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>Coquilles Saint-Jacques</b></p>
-                                <h4>Accompagnées d'une purée de panais</h4>
+                                <p><b>Filet de boeuf aux herbes</b></p>
+                                <h4>Accompagné de sa ribambelle de légumes</h4>
                               </div>   
                               <div class="pricemenu">  
                                 <b>40€</b>
@@ -127,8 +127,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Magret de canard</b></p>
-                                  <h4>Et parmentier de pommes de terre</h4>
+                                  <p><b>Parmentier de queue de boeuf</b></p>
+                                  <h4>À la truffe noire sur sa purée de panais</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>35€</b>
@@ -146,8 +146,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Pigeonneau d’Ille-et-Vilaine</b></p>
-                                  <h4>Sur son lit de gnocchis aux légumes</h4>
+                                  <p><b>Filet de turbot</b></p>
+                                  <h4>Aux agrumes</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>44€</b>
@@ -168,8 +168,8 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>Pétales de violettes glacés</b></p>
-                                <h4>Et purée de noisettes</h4>
+                                <p><b>Paris-Brest</b></p>
+                                <h4>Revisité</h4>
                               </div>   
                               <div class="pricemenu">  
                                 <b>18€</b>
@@ -187,8 +187,8 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>Fondant au chocolat</b></p>
-                                <h4>Revisité</h4>
+                                <p><b>Macaron au chocolat d'exception </b></p>
+                                <h4>Et glace à la vanille de Madagascar</h4>
                               </div>   
                               <div class="pricemenu">  
                                 <b>22€</b>
@@ -206,8 +206,8 @@
 
                       <div class="detail"> 
                               <div class="menu">    
-                                <p><b>Millefeuille croustillant</b></p>
-                                <h4>Myrtilles et pâte d’amande</h4>
+                                <p><b>Mousse au chocolat </b></p>
+                                <h4>Au piment d'Espelette et à la truffe noire</h4>
                               </div>   
                               <div class="pricemenu">  
                                 <b>23€</b>
