menu_Le délice des sens

--- a/Desktop/P3/resto2.html
+++ b/Desktop/P3/resto2.html
@@ -31,7 +31,7 @@
         <div class="partie3">
 
             <div class="titrep3">
-                <h1>À la française</h1>
+                <h1>La note enchantée</h1>
                 <i  class="far fa-heart"></i>
             </div>
    
@@ -44,9 +44,9 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Tartare de poulpe acidule </b></p>
+                                  <p><b>Ravioles de foie gras</b></p>
                                   <h4>
-                                    Aux zestes d'orange
+                                    Accompagnés de leur crème à la truffe
                                   </h4>
                                 </div>   
                                 <div class="pricemenu">  
@@ -65,8 +65,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Velouté de légumes d'antan</b></p>
-                                  <h4>Carotte, panais, topinambour</h4>
+                                  <p><b>Caviar osciètre </b></p>
+                                  <h4>Sur blini à la farine de blé noir</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>35€</b>
@@ -84,8 +84,8 @@
 
                         <div class="detail"> 
                                 <div class="menu">    
-                                  <p><b>Soupe à l'oignon</b></p>
-                                  <h4>Revisitée </h4>
+                                  <p><b>Homard et espuma de potiron</b></p>
+                                  <h4>Mariné aux zestes d'orange</h4>
                                 </div>   
                                 <div class="pricemenu">  
                                   <b>20€</b>
